# coherent-momentum-optimizer

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.parent_workspace.txt  README.md  REFERENCES.md  REPRODUCING.md  pyproject.toml
configs/: cnn_credibility_benchmark.yaml  coherent_momentum_gpu_ablation.yaml  coherent_momentum_gpu_cnn.yaml  coherent_momentum_gpu_default.yaml  coherent_momentum_gpu_multitask.yaml  coherent_momentum_gpu_smoke.yaml  coherent_momentum_gpu_stress.yaml  coherent_momentum_optimizer_ablation.yaml  coherent_momentum_optimizer_default.yaml  coherent_momentum_optimizer_energy.yaml  coherent_momentum_optimizer_tuning.yaml  coherent_momentum_real_baseline_ablation.yaml  coherent_momentum_real_baseline_default.yaml  coherent_momentum_real_baseline_energy.yaml  directional_instability_benchmark.yaml  magneto_gpu_ablation.yaml  magneto_gpu_cnn.yaml  magneto_gpu_default.yaml  magneto_gpu_multitask.yaml  magneto_gpu_smoke.yaml  magneto_gpu_stress.yaml  magneto_hamiltonian_adam_ablation.yaml  magneto_hamiltonian_adam_default.yaml  magneto_hamiltonian_adam_energy.yaml  magneto_hamiltonian_adam_tuning.yaml  real_hamiltonian_adam_ablation.yaml  real_hamiltonian_adam_default.yaml  real_hamiltonian_adam_energy.yaml
docs/: CLAIM.md  COMPARISONS.md  FAILURE_CASES.md  METHOD.md  MODERN_BASELINES.md  REAL_BASELINE.md
examples/: basic_usage.py  cmo_compare_against_adamw.py  cmo_directional_instability_demo.py  cmo_minimal_mlp.py
notebooks/: coherent_momentum_full_eval.ipynb
paper/: artifact_manifest.json  (+4 more)
(+212 files in other folders)
